--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     tracks:[{
                         name: "Vũ Quốc Việt",
                         artist: "10 Ngàn Năm (Speed up)",
-                        cover: "https://i.imgur.com/TScl7oM.jpg",
+                        cover: "https://i.imgur.com/npf0ckl.jpg",
                         source: "https://docs.google.com/uc?id=1JOIIjqq22rlZ2zG8wv9HQ2Axwsrbz5tN",
                         url: "https://docs.google.com/uc?id=1JOIIjqq22rlZ2zG8wv9HQ2Axwsrbz5tN",
                         favorited: false
